# FinAgentEnv

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: environment.py  finance_engine.py  graders.py  models.py  tasks.py
server/: app.py
