[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finagent_env"
version = "1.0.0"
description = "Financial decision-making environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["env", "server"]